Upgrading tbGrid to Components... One open bug, overlay is not showing the width correctly

--- a/Unosquare.Tubular/Css/tubular/tubular.css
+++ b/Unosquare.Tubular/Css/tubular/tubular.css
@@ -3,20 +3,20 @@
 }
 
 /* Tubular Grid General Styles */
-div.tubular-grid {
+tb-grid {
     position: relative;
 }
 
-    div.tubular-grid div.row {
+    tb-grid div.row {
         margin-top: 4px;
         margin-bottom: 4px;
     }
 
-        div.tubular-grid div.row:first-child {
+        tb-grid div.row:first-child {
             margin-top: 0;
         }
 
-        div.tubular-grid div.row:last-child {
+        tb-grid div.row:last-child {
             margin-bottom: 0;
         }
 
@@ -52,7 +52,7 @@ div.tubular-overlay {
 
     div.tubular-overlay > div {
         position: absolute;
-        background-color: rgb(180,180,180);
+        background-color: #b4b4b4;
         color: #fff;
         height: 100%;
         top: 0;
@@ -99,7 +99,7 @@ div.tubular-general-overlay {
 
     div.tubular-general-overlay > div {
         position: absolute;
-        background-color: rgb(180,180,180);
+        background-color: #b4b4b4;
         color: #fff;
         height: 100%;
         width: 100%;
@@ -382,4 +382,9 @@ select.checkbox-list:hover option:checked, select.checkbox-list:focus option:che
 
 div.input-group-addon.fa {
     font-size: 10px;
+}
+
+/* Components styling */
+tb-edit-button.btn {
+    padding: 0;
 }
